--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Working With Multimedia</h1>
+
+    <h2>Videos</h2>
+    <video src="assets-2/solar-system.mp4"></video>
 </body>
 </html>
