--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>Working With Multimedia</h1>
 
     <h2>Videos</h2>
-    <video src="assets-2/solar-system.mp4"></video>
+    <video controls src="assets-2/solar-system.mp4"></video>
 </body>
 </html>
