--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Working With Multimedia</title>
 </head>
 <body>
     <h1>Working With Multimedia</h1>
 
     <h2>Videos</h2>
-    <video controls src="assets-2/solar-system.mp4"></video>
+    <video controls loop muted autoplay preload="metadata" src="assets-2/solar-system.mp4"></video>
 </body>
 </html>
