--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
     <h1>Working With Multimedia</h1>
 
     <h2>Videos</h2>
-    <video controls loop muted autoplay preload="metadata" src="assets-2/solar-system.mp4" 
-    track kind="captions" src="assets-2/solar-system.vtt" default label="English" srclang="en">
+    <video controls loop muted preload="metadata" 
+    poster="assets-2/poster.webp"
+    src="assets-2/solar-system.mp4" 
+    track kind="captions" src="assets-2/solar-system.vtt" 
+    default label="English" srclang="en">
     </video>
 </body>
 </html>
