--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
     <h1>Working With Multimedia</h1>
 
     <h2>Videos</h2>
+    <div style="max-width: 700px; height: auto;">
     <video controls loop muted preload="metadata" 
     poster="assets-2/poster.webp"
     src="assets-2/solar-system.mp4" 
     track kind="captions" src="assets-2/solar-system.vtt" 
-    default label="English" srclang="en">
+    default label="English" srclang="en"
+    style="max-width: 100%;">
     </video>
+    </div>
 </body>
 </html>
