--- a/index.html
+++ b/index.html
@@ -23,5 +23,11 @@
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
         </iframe>
+
+    <h2>Audio</h2>
+    <audio controls src="assets-2/waiting_for_a_train.ogg">
+    <source src="assets-2/waiting_for_a_train.mp3">
+    Your browser doesn't support audio playback.
+    </audio>
 </body>
 </html>
